# nnscope

./: pyproject.toml
.docs_claude/plans/active/: independent-verification-channels.md
.docs_claude/plans/completed/: gligen-preflight-parity-and-persistent-hook-inspection.md  gradient-preflight.md
src/nnscope/: __init__.py  grad.py  html.py  trace.py  tree.py
tests/: smoke_nnscope.py
